--- a/template_html/review_content.html
+++ b/template_html/review_content.html
@@ -368,7 +368,7 @@
                                                 <div class="row mb-15px">
                                                     <label class="form-label">評審意見</label>
                                                     <div>
-                                                        <textarea class="form-control" rows="3">1. 計畫摘要表及 P.55 量化效益 N+1=114 ... 以此類推,請直接寫正確數字
+                                                        <textarea class="form-control" rows="2">1. 計畫摘要表及 P.55 量化效益 N+1=114 ... 以此類推,請直接寫正確數字
 2. P.41 C 分項加總不等於 28.8%
 3. 申請須知規定:必要效益(20%)明確訂定績效關鍵指標:訂定具體且可行之績效指標,並說明算方式。計畫必要效益:須說明新增投資、帶動客戶數、帶動客戶營收、上架雲市集等四大效益,創造降本提效或帶動營收等效益。
 計畫架構:E 必要效益須佔 20%,請調整,調整後預定進度表也須調整一致。</textarea>
@@ -381,19 +381,19 @@
                                                             <div class="form-check mb-2 form-check-inline">
                                                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked="">
                                                                 <label class="form-check-label text-gray" for="flexRadioDefault2">
-                                                                    建議通過(推薦)
+                                                                    建議通過
                                                                 </label>
                                                             </div>
                                                             <div class="form-check mb-2 form-check-inline">
                                                                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                                                                 <label class="form-check-label text-gray" for="flexRadioDefault1">
-                                                                    建議不通過(不推薦)
+                                                                    建議不通過
                                                                 </label>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="row" style="margin-top:0;">
+                                                <div class="row" style="margin-top:-25px;">
                                                     <div class="col-sm-12 text-center" style="margin-top:15px;">
                                                         <button type="submit" class="btn btn-primary w-100px me-5px" onclick="window.location.href='review_home.html';">送出</button>
                                                         <button type="button" class="btn btn-default w-100px" onclick="window.location.href='review_home.html';">儲存草稿</button>
