--- a/index_list.html
+++ b/index_list.html
@@ -34,6 +34,17 @@
                 <tbody>
                     <tr>
                         <td></td>
+                        <td>[2025新增]聘審作業DEMO畫面</td>
+                        <td>
+                            <ol>
+                                <li>承辦人員送審作業(條列頁)：<a href="template_html/list_reviewCommittee_new.html" target="_blank"></a></li>
+                                <li>聘審登錄(新增/編修)：<a href="template_html/cp_reviewCommittee_new.html" target="_blank"></a></li>
+                            </ol>
+                            
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>DEMO用(控制瀏覽器大小)</td>
                         <td>
                             <ol>
